# CT

./: .gitignore  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  tsc-core-v1.1.17.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
core/: SPEC-COMPLIANCE.md  c-equiv.md  tsc-core.md  tsc-operational.md
diagrams/: state-machine.mmd
docs/: tsc-glossary.md
examples/cellular-automata/: glider.md  random-soup.md
examples/philosophical/: consciousness.md
reference/: __init__.py  glider.md  random_soup.md  tsc-controller.py
reference/cli/: __init__.py  tsc.py
reference/python/: __init__.py  parser_interface.py  tsc-controller.py  tsc_controller.py
reference/python/parsers/: __init__.py  cellular_automaton.py  stub.py  tsc_yaml_v2.py
runtime/: tsc-instructions.md
spec/: c-equiv-kernel.md  c-equiv.md  tsc-core.md  tsc-glossary.md  tsc-operational.md
tests/conformance/: test_consciousness.py  test_glider.py  test_random_soup.py
tsc-core/: OBSERVABILITY_SCHEMA.yaml  tsc-core.md
