[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsc-framework"
version = "2.1.0"
description = "Triadic Self-Coherence (TSC) reference CLI and conformance tests"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "TSC Team", email = "team@example.com" }
]
dependencies = [
  "click>=8.1.7",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.9",
  "mdformat>=0.7.17",
  "mdformat-gfm>=0.3.5"
]

[project.scripts]
tsc = "reference.cli.tsc:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reference*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "UP"]
ignore = ["E203", "E741", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mdformat]
number = false
wrap = 100